opam-version: "2.0"
name: "pop3-server-unix"
version: "0.1"
synopsis: "A pure OCaml implementation of an RFC 1939 server on UNIX"
description: """
A pure OCaml implementation of the components of RFC 1939 that are specific to
servers running on UNIX.
"""
maintainer: "Matt Harrison <matt.anthony.harrison@gmail.com>"
authors: "Matt Harrison <matt.anthony.harrison@gmail.com>"
license: "MIT"
homepage: "https://github.com/m-harrison/ocaml-pop3"
bug-reports: "https://github.com/m-harrison/ocaml-pop3/issues"
dev-repo: "https://github.com/m-harrison/ocaml-pop3"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "conduit-lwt-unix"
  "dune" {build}
  "irmin"
  "odoc" {build}
  "pop3-server"
]
